# coral-ocaml

./: .gitignore  .merlin  .travis.yml  Dockerfile  LICENSE  Makefile  NOTES.org  README.md  TODO.org  dune-project
docker-images/ocaml-env/: Dockerfile
docs/: attributes.org  exceptions.org  instantiation.org  overloading.org  roadmap.org  shell.org  tasks.org  type_resolution.org
examples/: README.org  adhoc_polymorphism_vs_type_classes.coral  adhoc_polymorphism_vs_type_classes.org  bigint.coral  console.coral  cstd.coral  dictionary.cc  dictionary.coral  io.coral  partial_evaluation.org  raw_clib.coral  raw_posix.coral  regex.coral  set.coral  sys_io.coral  sys_io.posix.coral  wip.coral
examples/benchmarks_game/: binary-trees.coral  binary_tree.ml  fasta.coral  knucleotide.coral  knucleotide.org  pidigits.coral  regex-redux.coral  revcomp.coral  todo-fannkuch-redux.coral  todo-mandelbrot.coral
samples/: collatz.coral  factorial.coral  hello.coral  inference.coral  polymorphism_adhoc.coral  tuples.coral
src/: .ocamlformat  ansicolor.ml  ast.ml  attribute_resolution.ml  builtin_defs.ml  codegen.ml  coral.ml  coralModule.ml  cutil.cc  dune  foob.ml  foobar.c  grammar.mly  import_resolution.ml  init_func.ml  lexer.ml  lexer.mll  lexerInterface.ml  llvmBackend.ml  llvm_backend.ml  main.ml  multifunc.ml  name_resolution.ml  name_resolution.mli  name_resolver.ml  parser.ml  return_insert.ml  tests.ml  type_graph.ml  type_graph_2.ml  type_resolution_3.ml  type_resolver.ml  type_visitor.ml
src/core/: ast.ml  ast_node.ml  builtins.ml  compile_unit.ml  dune  id.ml  names.ml  sigs.ml  static_type.ml  type.ml  utils.ml
src/frontend/: dune  frontend.ml  grammar.mly  grammar_helper.ml  import_resolution.ml  lexer.mll  lexerInterface.ml  token.ml
src/misc/: product_type.ml
src/test/: main.ml  test_type_graph_2.ml
src/test/wip/: dune  main.ml
src/type_resolution/: README.org  apply_overload_reference.ml  dune  resolver.ml  types.ml  typespec.ml
src/types/: coral_types.ml  dune  env.ml  env2.ml  env_debug.ml  types.ml  typespec.ml
test/: basics.ml  dune  main.ml  name_resolution.ml  test_utils.ml  type_resolution.ml  utils.ml
test2/: dune  test2.ml
test_wip/: dune  main.ml
tests/: .#hello_world.t  core.ml  factorial.coral  hello_world.yaml
(+29 files in other folders)
