(library
 (name coral_passes)
 (modules
   name_resolution init_func builtin_defs)
 (libraries coral_core)
 (preprocess (pps ppx_compare ppx_deriving.show ppx_sexp_conv ppx_let ppx_inline_test)))

;; (library
;;  (name coral)
;;  (modules
;;    llvm_backend)
;;  (foreign_stubs
;;   (language c)
;;   (names foobar))
;;  (libraries coral_types coral_core coral_frontend str ctypes ctypes.foreign llvm
;;             llvm.analysis llvm.passmgr_builder llvm.executionengine ppx_let)
;;  (preprocess
;;   (pps ppx_compare ppx_deriving.show ppx_sexp_conv ppx_let ppx_inline_test)))

(executable
 (name main)
 (modules main)
 (libraries coral_frontend coral_passes core)
 (preprocess
  (pps ppx_compare ppx_deriving.show ppx_sexp_conv ppx_let ppx_inline_test)))

(env
 (dev
  (flags
   (:standard -warn-error +8-26-27-33))))
