(library
 (name coral_main)
 (inline_tests)
 (libraries stdio base sexplib)
 (preprocess (pps
              ppx_compare
              ppx_deriving.show
              ppx_expect
              ppx_sexp_conv ppx_sexp_value
              ppx_let
              )))
(env
 (dev
  (flags
   (:standard -warn-error +8-26-27-32-33))))

