(library
 (name coral_types)
 (inline_tests (flags -verbose))
 (libraries re stdio base coral_core)
 (preprocess
  (pps ppx_compare ppx_variants_conv ppx_deriving.show
       ppx_sexp_conv
       ppx_sexp_value
       ppx_fields_conv
       ;; TODO: it's convenient to have some tests here
       ;; but we should move them to the tests lib eventuallyy
       ppx_expect
       ppx_inline_test
       )))
